<resources>
    <string name="app_name">Camera</string>
    <string name="image_file_name_format" translatable="false">"'IMG'_yyyyMMdd_HHmmss"</string>
    <string name="pref_camera_video_flashmode_default" translatable="false">off</string>
    <string name="pref_camcorder_settings_category" translatable="false">Camcorder settings</string>
    <string name="pref_camera_id_title" translatable="false">Choose camera</string>
    <string name="pref_video_quality_default" translatable="false">6</string>
    <string name="pref_camera_scan_flashmode_default" translatable="false">off</string>
    <string name="pref_camera_id_default" translatable="false">0</string>
    <string name="pref_camera_id_entry_back" translatable="false">Back</string>
    <string name="pref_camera_id_entry_front" translatable="false">Front</string>
    <string name="pref_camera_recordlocation_title" translatable="false">Store location</string>
    <string name="pref_camera_recordlocation_default" translatable="false">none</string>
    <string name="pref_camera_location_label" translatable="false">LOCATION</string>
    <string name="pref_camera_timer_title" translatable="false">Countdown timer</string>
    <string name="pref_camera_timer_default" translatable="false">0</string>
    <string name="pref_camera_timer_sound_default" translatable="false">@string/setting_on_value</string>
    <string name="pref_camera_timer_sound_title" translatable="false">Beep during countdown</string>
    <string name="pref_video_quality_title" translatable="false">Video quality</string>
    <string name="pref_video_quality_entry_1080p" translatable="false">HD 1080p</string>
    <string name="pref_video_quality_entry_720p" translatable="false">HD 720p</string>
    <string name="pref_video_quality_entry_480p" translatable="false">SD 480p</string>
    <string name="pref_video_quality_entry_high" translatable="false">High</string>
    <string name="pref_video_quality_entry_low" translatable="false">Low</string>
    <string name="pref_video_time_lapse_frame_interval_title" translatable="false">Time lapse</string>
    <string name="pref_camera_settings_category" translatable="false">Camera settings</string>
    <string name="pref_camera_picturesize_title" translatable="false">Picture size</string>
    <string name="pref_camera_picturesize_entry_13mp" translatable="false">13M pixels</string>
    <string name="pref_camera_picturesize_entry_8mp" translatable="false">8M pixels</string>
    <string name="pref_camera_picturesize_entry_5mp" translatable="false">5M pixels</string>
    <string name="pref_camera_picturesize_entry_4mp" translatable="false">4M pixels</string>
    <string name="pref_camera_picturesize_entry_3mp" translatable="false">3M pixels</string>
    <string name="pref_camera_picturesize_entry_2mp" translatable="false">2M pixels</string>
    <string name="pref_camera_picturesize_entry_2mp_wide" translatable="false">2M pixels (16:9)</string>
    <string name="pref_camera_picturesize_entry_1_3mp" translatable="false">1.3M pixels</string>
    <string name="pref_camera_picturesize_entry_1mp" translatable="false">1M pixels</string>
    <string name="pref_camera_picturesize_entry_vga" translatable="false">VGA</string>
    <string name="pref_camera_picturesize_entry_qvga" translatable="false">QVGA</string>
    <string name="pref_camera_focusmode_title" translatable="false">Focus mode</string>
    <string name="pref_camera_focusmode_entry_auto" translatable="false">Auto</string>
    <string name="pref_camera_focusmode_entry_infinity" translatable="false">Infinity</string>
    <string name="pref_camera_focusmode_entry_macro" translatable="false">Macro</string>
    <string name="pref_camera_focusmode_label_auto" translatable="false">AUTO</string>
    <string name="pref_camera_focusmode_label_infinity" translatable="false">INFINITY</string>
    <string name="pref_camera_focusmode_label_macro" translatable="false">MACRO</string>
    <string name="pref_camera_flashmode_default" translatable="false">auto</string>
    <string name="pref_scan_flashmode_default" translatable="false">off</string>
    <string name="pref_camera_flashmode_title" translatable="false">Flash mode</string>
    <string name="pref_camera_flashmode_entry_auto" translatable="false">Auto</string>
    <string name="pref_camera_flashmode_entry_on" translatable="false">On</string>
    <string name="pref_camera_flashmode_entry_off" translatable="false">Off</string>
    <string name="pref_camera_flashmode_label_auto" translatable="false">FLASH AUTO</string>
    <string name="pref_camera_flashmode_label_on" translatable="false">FLASH ON</string>
    <string name="pref_camera_flashmode_label_off" translatable="false">FLASH OFF</string>
    <string name="pref_camera_whitebalance_title" translatable="false">White balance</string>
    <string name="pref_camera_whitebalance_entry_auto" translatable="false">Auto</string>
    <string name="pref_camera_whitebalance_entry_incandescent" translatable="false">Incandescent</string>
    <string name="pref_camera_whitebalance_entry_daylight" translatable="false">Daylight</string>
    <string name="pref_camera_whitebalance_entry_fluorescent" translatable="false">Fluorescent</string>
    <string name="pref_camera_whitebalance_entry_cloudy" translatable="false">Cloudy</string>
    <string name="pref_camera_whitebalance_label_auto" translatable="false">AUTO</string>
    <string name="pref_camera_whitebalance_label_incandescent" translatable="false">INCANDESCENT</string>
    <string name="pref_camera_whitebalance_label_daylight" translatable="false">DAYLIGHT</string>
    <string name="pref_camera_whitebalance_label_fluorescent" translatable="false">FLUORESCENT</string>
    <string name="pref_camera_whitebalance_label_cloudy" translatable="false">CLOUDY</string>
    <string name="pref_camera_scenemode_default" translatable="false">auto</string>
    <string name="pref_camera_scenemode_title" translatable="false">Scene mode</string>
    <string name="pref_camera_scenemode_entry_auto" translatable="false">Auto</string>
    <string name="pref_camera_scenemode_entry_hdr" translatable="false">HDR</string>
    <string name="pref_camera_scenemode_entry_action" translatable="false">Action</string>
    <string name="pref_camera_scenemode_entry_night" translatable="false">Night</string>
    <string name="pref_camera_scenemode_entry_sunset" translatable="false">Sunset</string>
    <string name="pref_camera_scenemode_entry_party" translatable="false">Party</string>
    <string name="pref_camera_scenemode_label_auto" translatable="false">NONE</string>
    <string name="pref_camera_scenemode_label_action" translatable="false">ACTION</string>
    <string name="pref_camera_scenemode_label_night" translatable="false">NIGHT</string>
    <string name="pref_camera_scenemode_label_sunset" translatable="false">SUNSET</string>
    <string name="pref_camera_scenemode_label_party" translatable="false">PARTY</string>
    <string name="pref_exposure_title" translatable="false">Exposure</string>
    <string name="pref_video_time_lapse_frame_interval_default" translatable="false">0</string>
    <string name="pref_camera_whitebalance_default" translatable="false">auto</string>
    <string name="cd_module_indicator" translatable="false">Module Indicator</string>
    <string name="cd_panorama_bg" translatable="false">panorama_bg</string>
    <string name="cd_camera_pano_viewframe_0" translatable="false">camera_pano_viewframe_0</string>
    <string name="cd_camera_pano_direction_1" translatable="false">camera_pano_direction_1</string>
    <string name="cd_lower_controls" translatable="false">lower_controls</string>
    <string name="content_descriptor_imageview" translatable="false">imageview</string>
    <string name="guide_photo_text">Photo</string>
    <string name="guide_video_text">Video</string>
    <string name="guide_scan_text">Scan</string>
    <string name="guide_pano_text">Pano</string>
    <string name="camera_setting_category_general">General</string>
    <string name="camera_setting_category_general_key" translatable="false">key_camera_setting_category_general</string>
    <string name="camera_setting_category_photo">Photo</string>
    <string name="camera_setting_category_photo_key" translatable="false">key_camera_setting_category_photo</string>
    <string name="camera_setting_category_video">Video</string>
    <string name="camera_setting_category_video_key" translatable="false">key_camera_setting_category_video</string>
    <string name="camera_setting_category_other">Others</string>
    <string name="camera_setting_category_other_key" translatable="false">key_camera_setting_category_other</string>
    <string name="camera_setting_item_loacation_key" translatable="false">pref_camera_recordlocation_key</string>
    <string name="camera_setting_item_location_title">Record Location Information</string>
    <string name="camera_setting_item_sdcard_key" translatable="false">pref_save_path</string>
    <string name="camera_setting_item_sdcard_dialog_title">Storage</string>
    <string name="camera_setting_item_sdcard_default" translatable="false">internal</string>
    <string name="camera_setting_item_sdcard_summary" translatable="false"></string>
    <string name="camera_setting_item_sdcard_title">Storage</string>
    <string name="camera_setting_item_volume_key_function_key" translatable="false">pref_volume_key_function_key</string>
    <string name="camera_setting_item_volume_key_function_title">Use volume key as </string>
    <string name="camera_setting_item_volume_key_function_default" translatable="false">shutter</string>
    <string name="camera_setting_item_volume_key_function_dialog_title">Use volume key as</string>
    <string name="camera_setting_item_shutter_sound_key" translatable="false">pref_shutter_sound_key</string>
    <string name="camera_setting_item_shutter_sound_title">Shutter sound</string>
    <string name="camera_setting_item_preview_size_key" translatable="false">pref_preview_size_key</string>
    <string name="camera_setting_item_preview_size_title">Aspect ratio</string>
    <string name="camera_setting_item_preview_size_default" translatable="false">fullscreen</string>
    <string name="camera_setting_item_zsd" translatable="false">pref_zsd</string>
    <string name="camera_setting_item_zsd_title">ZSD</string>
    <string name="camera_setting_item_force_autofocus" translatable="false">pref_force_autofocus</string>
    <string name="camera_setting_item_force_autofocus_title">Force autofocus</string>
    <string name="camera_setting_item_photo_resolution_key" translatable="false">pref_photo_resolution_key</string>
    <string name="camera_setting_item_photo_resolution_title">Image quality</string>
    <string name="camera_setting_item_photo_resolution_default" translatable="false">high</string>
    <string name="camera_setting_item_photo_resolution_dialog_title">Image quality </string>
    <string name="camera_setting_item_video_resolution_key" translatable="false">pref_video_resolution_key</string>
    <string name="camera_setting_item_video_resolution_title">Video quality</string>
    <string name="camera_setting_item_video_resolution_default" translatable="false">high</string>
    <string name="camera_setting_item_video_resolution_dialog_title">Video Quality</string>
    <string name="camera_setting_item_beauty_level_key" translatable="false">pref_beauty_level_key</string>
    <string name="camera_setting_item_beauty_level_title">Beauty mode</string>
    <string name="camera_setting_item_beauty_level_default"  translatable="false">medium</string>
    <string name="camera_setting_item_beauty_level_dialog_title">Beauty mode</string>
    <string name="photo_setting_lines">Grid</string>
    <string name="photo_setting_hdr" translatable="false">HDR</string>
    <string name="photo_setting_face_beauty">Beauty</string>
    <string name="photo_setting_more">Settings</string>
</resources>