<?xml version="1.0" encoding="utf-8"?>
<PreferenceGroup
        xmlns:camera="http://schemas.android.com/apk/res/cc.fotoplace.camera"
        camera:title="@string/pref_camcorder_settings_category">
    <ListPreference
            camera:key="pref_video_quality_key"
            camera:defaultValue="@string/pref_video_quality_default"
            camera:title="@string/pref_video_quality_title"
            camera:entries="@array/pref_video_quality_entries"
            camera:entryValues="@array/pref_video_quality_entryvalues"/>
    <ListPreference
            camera:key="pref_video_time_lapse_frame_interval_key"
            camera:defaultValue="@string/pref_video_time_lapse_frame_interval_default"
            camera:title="@string/pref_video_time_lapse_frame_interval_title"
            camera:entries="@array/pref_video_time_lapse_frame_interval_entries"
            camera:entryValues="@array/pref_video_time_lapse_frame_interval_entryvalues"/>
    <IconListPreference
            camera:key="pref_camera_video_flashmode_key"
            camera:defaultValue="@string/pref_camera_video_flashmode_default"
            camera:title="@string/pref_camera_flashmode_title"
            camera:icons="@array/video_flashmode_icons"
            camera:largeIcons="@array/video_flashmode_largeicons"
            camera:entries="@array/pref_camera_video_flashmode_entries"
            camera:labelList="@array/pref_camera_video_flashmode_labels"
            camera:entryValues="@array/pref_camera_video_flashmode_entryvalues"/>
    <ListPreference
            camera:key="pref_camera_whitebalance_key"
            camera:defaultValue="@string/pref_camera_whitebalance_default"
            camera:title="@string/pref_camera_whitebalance_title"
            camera:entries="@array/pref_camera_whitebalance_entries"
            camera:labelList="@array/pref_camera_whitebalance_labels"
            camera:entryValues="@array/pref_camera_whitebalance_entryvalues"/>
    <ListPreference
            camera:key="pref_camera_id_key"
            camera:defaultValue="@string/pref_camera_id_default"
            camera:title="@string/pref_camera_id_title"
            camera:entries="@array/camera_id_entries"
            camera:labelList="@array/camera_id_labels"/>
    <ListPreference
            camera:key="pref_camera_recordlocation_key"
            camera:defaultValue="@string/pref_camera_recordlocation_default"
            camera:title="@string/pref_camera_recordlocation_title"
            camera:entries="@array/pref_camera_recordlocation_entries"
            camera:entryValues="@array/pref_camera_recordlocation_entryvalues" />
</PreferenceGroup>
